# zkMIPS

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs
crates/cli/src/commands/: build.rs  mod.rs  new.rs  vkey.rs
crates/core/executor/: Cargo.toml
crates/core/executor/src/: air.rs  context.rs  cost.rs  dependencies.rs  executor.rs  hook.rs  instruction.rs  lib.rs  memory.rs  opcode.rs  program.rs  programs.rs  record.rs  register.rs  state.rs  utils.rs
crates/core/executor/src/artifacts/: mips_costs.json
crates/core/executor/src/events/: byte.rs  cpu.rs  instr.rs  memory.rs  syscall.rs  utils.rs
crates/core/executor/src/events/precompiles/: ec.rs  edwards.rs  linux.rs  mod.rs  poseidon2_permute.rs
crates/core/executor/src/syscalls/: code.rs  context.rs  mod.rs  write.rs
crates/core/executor/src/syscalls/precompiles/: mod.rs  u256x2048_mul.rs  uint256.rs
crates/core/executor/src/syscalls/precompiles/edwards/: add.rs  decompress.rs
crates/core/executor/src/syscalls/precompiles/fptower/: fp.rs  fp2_addsub.rs  fp2_mul.rs
crates/core/executor/src/syscalls/precompiles/keccak/: sponge.rs
crates/core/executor/src/syscalls/precompiles/poseidon2/: permute.rs
crates/core/executor/src/syscalls/precompiles/sha256/: compress.rs  extend.rs
crates/core/executor/src/syscalls/precompiles/sys_linux/: mod.rs  sysbrk.rs  sysclone.rs  sysexitgroup.rs  sysfcntl.rs  sysmmap.rs  sysnop.rs  (+2 more)
crates/cuda/: Cargo.toml  build.rs
crates/cuda/proto/: api.proto
crates/cuda/src/: lib.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: consts.rs
crates/prover/: COLLECT.md  Cargo.toml  TRUSTED_SETUP.md  collect.sh  release.sh  trusted_setup.sh
crates/prover/scripts/: find_maximal_shapes.rs  find_oom_shapes.rs  find_recursion_shapes.rs  find_small_shapes.rs  test_shape_fixing.rs
crates/prover/src/: build.rs  components.rs  lib.rs  shapes.rs  types.rs  utils.rs  verify.rs
crates/recursion/circuit/: Cargo.toml
crates/recursion/circuit/src/: challenger.rs  fri.rs  merkle_tree.rs  stark.rs  types.rs  utils.rs
crates/recursion/circuit/src/machine/: compress.rs  core.rs  wrap.rs
crates/recursion/gnark-ffi/: Cargo.toml  build.rs
crates/recursion/gnark-ffi/assets/: IZKMVerifier.sol  ZKMVerifierGroth16.txt  ZKMVerifierPlonk.txt
crates/recursion/gnark-ffi/go/: go.mod  main.go
crates/recursion/gnark-ffi/go/zkm/: build.go  test.go  utils.go  verify.go  zkm.go
crates/recursion/gnark-ffi/go/zkm/poseidon2/: constants.go  poseidon2_koalabear.go
crates/recursion/gnark-ffi/src/: groth16_bn254.rs  plonk_bn254.rs
crates/recursion/gnark-ffi/src/ffi/: native.rs
crates/sdk/: Cargo.toml  build.rs
crates/sdk/src/: action.rs  install.rs  lib.rs  proof.rs  utils.rs
crates/sdk/src/network/: mod.rs  prover.rs
crates/sdk/src/network/proto/: stage.proto
crates/sdk/src/proto/: stage.proto
crates/sdk/src/provers/: cpu.rs  cuda.rs  mock.rs  mod.rs
crates/test-artifacts/guests/: Cargo.toml
crates/test-artifacts/guests/bls12381-mul/src/: main.rs
crates/test-artifacts/guests/bn254-mul/src/: main.rs
crates/test-artifacts/guests/max_memory/: Cargo.toml
crates/test-artifacts/guests/max_memory/src/: main.rs
crates/test-artifacts/guests/poseidon2-permute/: Cargo.toml
crates/test-artifacts/guests/poseidon2-permute/src/: main.rs
crates/test-artifacts/guests/secp256k1-mul/src/: main.rs
crates/test-artifacts/guests/secp256r1-add/: Cargo.toml
crates/test-artifacts/guests/secp256r1-double/: Cargo.toml
crates/test-artifacts/guests/unconstrained/: Cargo.toml
crates/test-artifacts/guests/unconstrained/src/: main.rs
crates/test-artifacts/guests/verify-proof/src/: main.rs
crates/verifier/: Cargo.toml  README.md
crates/verifier/src/: error.rs  lib.rs  tests.rs  utils.rs
crates/verifier/src/groth16/: ark_converter.rs  mod.rs
crates/verifier/src/plonk/: converter.rs  mod.rs
crates/verifier/src/stark/: error.rs  mod.rs  verify.rs
crates/zkvm/entrypoint/: Cargo.toml
crates/zkvm/entrypoint/src/: heap.rs  lib.rs  libm.rs  memcpy.s  memset.s
crates/zkvm/entrypoint/src/allocators/: bump.rs  embedded.rs  mod.rs
crates/zkvm/entrypoint/src/syscalls/: io.rs  memory.rs  mod.rs  poseidon2_permute.rs  secp256r1.rs
crates/zkvm/lib/: Cargo.toml
crates/zkvm/lib/src/: io.rs  lib.rs  poseidon2.rs  secp256k1.rs  secp256r1.rs  utils.rs
crates/zkvm/lib/src/ecdsa/: affine.rs  projective.rs
examples/: Cargo.toml
examples/aggregation/host/src/: main.rs
examples/bitcoin/guest/: Cargo.toml
examples/bitcoin/guest/src/: main.rs
examples/bitcoin/host/: Cargo.toml
examples/bitcoin/host/src/: main.rs
examples/fibonacci/guest/: Cargo.toml
examples/fibonacci/host/: Cargo.toml
examples/fibonacci_c_lib/guest/: Cargo.toml  build.rs
examples/fibonacci_c_lib/guest/src/c_lib/: add.cpp  modulus.c
examples/fibonacci_c_lib/host/: Cargo.toml  build.rs
examples/groth16/host/: Cargo.toml
examples/keccak-precompile/host/: Cargo.toml
examples/keccak-precompile/host/src/: main.rs
examples/large-sum/guest/: Cargo.toml
examples/large-sum/guest/src/: main.rs
examples/large-sum/host/: Cargo.toml
examples/large-sum/host/src/: main.rs
examples/plonk/host/: Cargo.toml
examples/plonk/host/src/: main.rs
examples/poseidon2/guest/: Cargo.toml
examples/poseidon2/guest/src/: main.rs
examples/poseidon2/host/: Cargo.toml  build.rs
examples/poseidon2/host/src/: main.rs
examples/regex/host/src/: main.rs
examples/rsa/host/src/: main.rs
examples/simple-go/guest/: go.mod  main.go
examples/simple-go/host/: Cargo.toml  build.rs
examples/simple-go/host/src/: main.rs
examples/ssz-withdrawals/guest/: Cargo.toml
examples/ssz-withdrawals/guest/src/beacon/: hints.rs
examples/tendermint/guest/: Cargo.toml
examples/tendermint/host/: Cargo.toml
examples/unconstrained/guest/: Cargo.toml
examples/unconstrained/guest/src/: main.rs
examples/unconstrained/host/: Cargo.toml
examples/unconstrained/host/src/: main.rs
(+242 files in other folders)
