[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
repository = "https://github.com/zkMIPS/zkMIPS"
keywords = ["zkMIPS", "zero-knowledge", "zkvm"]
categories = ["cryptography"]

[workspace]
members = [
    "crates/stark",
    "crates/derive",
    "crates/primitives",
    "crates/recursion/compiler",
    "crates/recursion/core",
    "crates/core/machine",
    "crates/core/executor",
    "crates/recursion/derive",
    "crates/recursion/circuit",
    "crates/recursion/gnark-ffi",
    "crates/prover",
    "crates/build",
    "crates/zkvm/*",
    "crates/test-artifacts",
    "crates/curves",
    "crates/build",
    "crates/sdk",
    "crates/verifier",
]
exclude = ["examples/target"]
resolver = "2"


[profile.release]
opt-level = 3
[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true


[workspace.dependencies]
p3-air = { git = "https://github.com/zkMIPS/Plonky3" }
p3-field = { git = "https://github.com/zkMIPS/Plonky3" }
p3-challenger = { git = "https://github.com/zkMIPS/Plonky3" }
p3-commit = { git = "https://github.com/zkMIPS/Plonky3" }
p3-dft = { git = "https://github.com/zkMIPS/Plonky3" }
p3-matrix = { git = "https://github.com/zkMIPS/Plonky3" }
p3-maybe-rayon = { git = "https://github.com/zkMIPS/Plonky3" }
p3-util = { git = "https://github.com/zkMIPS/Plonky3" }
p3-fri = { git = "https://github.com/zkMIPS/Plonky3" }
p3-koala-bear = { git = "https://github.com/zkMIPS/Plonky3" }
p3-circle = { git = "https://github.com/zkMIPS/Plonky3" }
p3-keccak = { git = "https://github.com/zkMIPS/Plonky3" }
p3-keccak-air = { git = "https://github.com/zkMIPS/Plonky3" }
p3-mds = { git = "https://github.com/zkMIPS/Plonky3" }
p3-merkle-tree = { git = "https://github.com/zkMIPS/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/zkMIPS/Plonky3" }
p3-monty-31 = { git = "https://github.com/zkMIPS/Plonky3" }
p3-poseidon2 = { git = "https://github.com/zkMIPS/Plonky3" }
p3-symmetric = { git = "https://github.com/zkMIPS/Plonky3" }
p3-bn254-fr = { git = "https://github.com/zkMIPS/Plonky3" }
p3-uni-stark = { git = "https://github.com/zkMIPS/Plonky3" }

#p3-air = { path = "../Plonky3/air" }
#p3-field = { path = "../Plonky3/field" }
#p3-challenger = { path = "../Plonky3/challenger" }
#p3-commit = { path = "../Plonky3/commit" }
#p3-dft = { path = "../Plonky3/dft" }
#p3-matrix = { path = "../Plonky3/matrix" }
#p3-maybe-rayon = { path = "../Plonky3/maybe-rayon" }
#p3-util = { path = "../Plonky3/util" }
#p3-fri = { path = "../Plonky3/fri" }
#p3-koala-bear = { path = "../Plonky3/koala-bear" }
#p3-circle = { path = "../Plonky3/circle" }
#p3-keccak = { path = "../Plonky3/keccak" }
#p3-keccak-air = { path = "../Plonky3/keccak-air" }
#p3-mds = { path = "../Plonky3/mds" }
#p3-merkle-tree = { path = "../Plonky3/merkle-tree" }
#p3-mersenne-31 = { path = "../Plonky3/mersenne-31" }
#p3-monty-31 = { path = "../Plonky3/monty-31" }
#p3-poseidon2 = { path = "../Plonky3/poseidon2" }
#p3-symmetric = { path = "../Plonky3/symmetric" }
#p3-bn254-fr = { path = "../Plonky3/bn254-fr" }
#p3-uni-stark = { path = "../Plonky3/uni-stark" }

itertools = "0.13.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
tracing-forest = { version = "0.1.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.132"

rand = "0.8.5"
sha2 = { version = "0.10.8", default-features = false }
anyhow = "1.0.75"

zkm-recursion-derive = { path = "crates/recursion/derive", default-features = false }
zkm-recursion-circuit = { path = "crates/recursion/circuit", default-features = false }
zkm-recursion-gnark-ffi = { path = "crates/recursion/gnark-ffi", default-features = false }
zkm-recursion-compiler = { path = "crates/recursion/compiler" }
zkm-recursion-core = { path = "crates/recursion/core" }
zkm-core-executor = { path = "crates/core/executor", default-features = false }
zkm-core-machine = { path = "crates/core/machine", default-features = false }
zkm-derive = { path = "crates/derive" }
zkm-primitives = { path = "crates/primitives" }
zkm-stark = { path = "crates/stark" }
zkm-prover = { path = "crates/prover" }
zkm-build = { path = "crates/build" }
zkm-sdk = { path = "crates/sdk" }
zkm-verifier = { path = "crates/verifier" }

zkm-lib = { path = "crates/zkvm/lib", default-features = false }
zkm-zkvm = { path = "crates/zkvm/entrypoint", default-features = false }
zkm-curves = { path = "crates/curves" }

# For testing.
test-artifacts = { path = "crates/test-artifacts" }

# misc
hashbrown = "0.14.5"
