[workspace.package]
version = "1.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
repository = "https://github.com/ProjectZKM/Ziren"
keywords = ["zkMIPS", "zero-knowledge", "zkvm", "MIPS"]
categories = ["cryptography"]

[workspace]
members = [
    "crates/build",
    "crates/cli",
    "crates/core/executor",
    "crates/core/machine",
    "crates/cuda",
    "crates/curves",
    "crates/derive",
    "crates/primitives",
    "crates/prover",
    "crates/recursion/circuit",
    "crates/recursion/compiler",
    "crates/recursion/core",
    "crates/recursion/derive",
    "crates/recursion/gnark-ffi",
    "crates/sdk",
    "crates/stark",
    "crates/test-artifacts",
    "crates/verifier",
    "crates/zkvm/*",
]
exclude = ["examples/target"]
resolver = "2"


[profile.release]
opt-level = 3
[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true


[workspace.dependencies]
p3-air = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-field = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-challenger = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-commit = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-dft = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-matrix = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-maybe-rayon = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-util = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-fri = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-koala-bear = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-circle = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-keccak = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-keccak-air = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-mds = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-merkle-tree = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-monty-31 = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-poseidon2 = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-symmetric = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-bn254-fr = { git = "https://github.com/ProjectZKM/Plonky3" }
p3-uni-stark = { git = "https://github.com/ProjectZKM/Plonky3" }

# p3-air = { path = "../patch/Plonky3/air" }
# p3-field = { path = "../patch/Plonky3/field" }
# p3-challenger = { path = "../patch/Plonky3/challenger" }
# p3-commit = { path = "../patch/Plonky3/commit" }
# p3-dft = { path = "../patch/Plonky3/dft" }
# p3-matrix = { path = "../patch/Plonky3/matrix" }
# p3-maybe-rayon = { path = "../patch/Plonky3/maybe-rayon" }
# p3-util = { path = "../patch/Plonky3/util" }
# p3-fri = { path = "../patch/Plonky3/fri" }
# p3-koala-bear = { path = "../patch/Plonky3/koala-bear" }
# p3-circle = { path = "../patch/Plonky3/circle" }
# p3-keccak = { path = "../patch/Plonky3/keccak" }
# p3-keccak-air = { path = "../patch/Plonky3/keccak-air" }
# p3-mds = { path = "../patch/Plonky3/mds" }
# p3-merkle-tree = { path = "../patch/Plonky3/merkle-tree" }
# p3-mersenne-31 = { path = "../patch/Plonky3/mersenne-31" }
# p3-monty-31 = { path = "../patch/Plonky3/monty-31" }
# p3-poseidon2 = { path = "../patch/Plonky3/poseidon2" }
# p3-symmetric = { path = "../patch/Plonky3/symmetric" }
# p3-bn254-fr = { path = "../patch/Plonky3/bn254-fr" }
# p3-uni-stark = { path = "../patch/Plonky3/uni-stark" }

itertools = "0.13.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
tracing-forest = { version = "0.1.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.132"

rand = "0.8.5"
sha2 = { version = "0.10.8", default-features = false }
anyhow = "1.0.75"

zkm-recursion-derive = { path = "crates/recursion/derive", default-features = false }
zkm-recursion-circuit = { path = "crates/recursion/circuit", default-features = false }
zkm-recursion-gnark-ffi = { path = "crates/recursion/gnark-ffi", default-features = false }
zkm-recursion-compiler = { path = "crates/recursion/compiler" }
zkm-recursion-core = { path = "crates/recursion/core" }
zkm-core-executor = { path = "crates/core/executor", default-features = false }
zkm-core-machine = { path = "crates/core/machine", default-features = false }
zkm-derive = { path = "crates/derive" }
zkm-primitives = { path = "crates/primitives" }
zkm-stark = { path = "crates/stark" }
zkm-prover = { path = "crates/prover" }
zkm-build = { path = "crates/build" }
zkm-sdk = { path = "crates/sdk" }
zkm-cuda = { path = "crates/cuda" }
zkm-verifier = { path = "crates/verifier" }

zkm-lib = { path = "crates/zkvm/lib", default-features = false }
zkm-zkvm = { path = "crates/zkvm/entrypoint", default-features = false }
zkm-curves = { path = "crates/curves" }

# For testing.
test-artifacts = { path = "crates/test-artifacts" }

# misc
hashbrown = "0.14.5"
