[package]
name = "zkm-primitives"
description = "Ziren primitives"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
bincode = "1.3.3"
hex = "0.4.3"
lazy_static = "1.5.0"
num-bigint = { version = "0.4.6", default-features = false }
p3-field = { workspace = true }
p3-koala-bear = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-monty-31 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.8"
