[package]
name = "zkm-prover"
description = "zkMIPS prover"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
p3-matrix = { workspace = true }
zkm-recursion-compiler = { workspace = true }
zkm-recursion-core = { workspace = true }
zkm-recursion-circuit = { workspace = true }
zkm-recursion-gnark-ffi = { workspace = true }
zkm-core-machine = { workspace = true }
zkm-stark = { workspace = true }
p3-symmetric = { workspace = true }
zkm-core-executor = { workspace = true }
zkm-primitives = { workspace = true }
p3-field = { workspace = true }
p3-challenger = { workspace = true }
p3-koala-bear = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-commit = { workspace = true }
p3-util = { workspace = true }
bincode = "1.3.3"
serde = { workspace = true, features = ["derive", "rc"] }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2.3"
serde_json = { workspace = true }
clap = { version = "4.5.9", features = ["derive", "env"] }
anyhow = "1.0.83"
dirs = "5.0.1"
serial_test = "3.1.1"
num-bigint = "0.4.6"
thiserror = "1.0.63"
rayon = "1.10.0"
lru = "0.12.4"
eyre = "0.6.12"

[dev-dependencies]
test-artifacts = { workspace = true }

[[bin]]
name = "build_plonk_bn254"
path = "scripts/build_plonk_bn254.rs"

[[bin]]
name = "build_groth16_bn254"
path = "scripts/build_groth16_bn254.rs"

[[bin]]
name = "build_compress_vks"
path = "scripts/build_compress_vks.rs"

[[bin]]
name = "post_trusted_setup"
path = "scripts/post_trusted_setup.rs"

[[bin]]
name = "e2e"
path = "scripts/e2e.rs"

[[bin]]
name = "find_maximal_shapes"
path = "scripts/find_maximal_shapes.rs"

[[bin]]
name = "find_small_shapes"
path = "scripts/find_small_shapes.rs"

[[bin]]
name = "find_oom_shapes"
path = "scripts/find_oom_shapes.rs"

[[bin]]
name = "find_recursion_shapes"
path = "scripts/find_recursion_shapes.rs"

[[bin]]
name = "test_shape_fixing"
path = "scripts/test_shape_fixing.rs"

[features]
default = ["native-gnark"]
native-gnark = ["zkm-recursion-gnark-ffi/native"]
debug = ["zkm-core-machine/debug"]
