[package]
name = "zkm-sdk"
description = "Ziren is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
prost = { version = "0.11.0", optional = true }
serde = { workspace = true, features = ["derive"] }
twirp = { package = "twirp-rs", version = "0.13.0-succinct", optional = true }
async-trait = "0.1.81"
reqwest-middleware = { version = "0.3.2", optional = true }
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "trust-dns",
  "stream",
], optional = true }
anyhow = "1.0.83"
zkm-prover = { workspace = true }
zkm-core-machine = { workspace = true }
# zkm-cuda = { workspace = true, optional = true }
zkm-build = { workspace = true }
futures = "0.3.30"
bincode = "1.3.3"
ethers = "2.0.14"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"], optional = true }
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
p3-field = { workspace = true }
p3-koala-bear = { workspace = true }
p3-fri = { workspace = true }
indicatif = "0.17.8"
tracing = { workspace = true }
hex = "0.4.3"
log = "0.4.22"
dirs = "5.0.1"
tempfile = "3.10.1"
cfg-if = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
hashbrown = { workspace = true }
zkm-core-executor = { workspace = true }
zkm-stark = { workspace = true }
zkm-primitives = { workspace = true }
itertools = { workspace = true }
tonic = { version = "0.8.1", features = ["tls", "tls-roots", "transport"], optional = true }
alloy-sol-types = { version = "1.1", optional = true }
alloy-signer = { version = "0.14", optional = true }
alloy-signer-local = { version = "0.14", optional = true }
alloy-primitives = { version = "1.0", optional = true }
backoff = { version = "0.4", features = ["tokio"], optional = true }
num-bigint = "0.4.6"
serde_json = "1.0.140"

[dev-dependencies]
test-artifacts = { workspace = true }

[features]
default = ["network"]
native-gnark = ["zkm-prover/native-gnark"]
# TODO: Once alloy has a 1.* release, we can likely remove this feature flag, as there will be less 
# dependency resolution issues.
network = [
  "dep:prost",
  "dep:alloy-sol-types",
  "dep:tokio",
  "dep:alloy-signer",
  "dep:alloy-signer-local",
  "dep:reqwest",
  "dep:twirp",
  "dep:tonic",
#  "dep:reqwest-middleware",
]
network-v2 = [
  "dep:prost",
  "dep:alloy-sol-types",
  "dep:alloy-signer",
  "dep:alloy-signer-local",
  "dep:alloy-primitives",
  "dep:tokio",
  "dep:alloy-signer",
  "dep:reqwest",
  "dep:twirp",
  "dep:reqwest-middleware",
  "dep:tonic",
  "dep:backoff",
]
# cuda = ["zkm-cuda"]
cuda = []

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
  "build",
  "git",
  "git2",
] }
tonic-build = "0.8.0"

