[package]
name = "zkm-verifier"
description = "Verifier for Ziren Groth16 and Plonk proofs."
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
anyhow = "1.0.83"
substrate-bn = { git = "https://github.com/ziren-patches/bn.git", branch = "patch-0.6.0" }
sha2 = { version = "0.10.8", default-features = false }
thiserror = { version = "2", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", default-features = false }
bincode = "1.3.3"
rayon = "1.10.0"
strum_macros = "0.26.4"
once_cell = "1.21.3"

# arkworks
ark-bn254 = { version = "0.5", optional = true }
ark-serialize = { version = "0.5", optional = true }
ark-ff = { version = "0.5", optional = true }
ark-groth16 = { version = "0.5", optional = true }
ark-ec = { version = "0.5", optional = true }

itertools.workspace = true
p3-commit.workspace = true
p3-field.workspace = true
p3-koala-bear.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
zkm-core-executor.workspace = true
zkm-core-machine.workspace = true
zkm-primitives.workspace = true
zkm-recursion-core.workspace = true
zkm-stark.workspace = true
zkm-sdk = { workspace = true, optional = true }

[dev-dependencies]
zkm-prover = { workspace = true }
zkm-sdk = { workspace = true }
test-artifacts = { workspace = true }
num-bigint = "0.4.6"
num-traits = "0.2.19"

[features]
default = ["std"]
std = ["thiserror/std"]
ark = ["ark-bn254", "ark-serialize", "ark-ff", "ark-groth16", "ark-ec", "dep-sdk"]
dep-sdk = ["dep:zkm-sdk"]
dummy-vk-map = []
