[package]
name = "zkm-recursion-circuit"
description = "Ziren recursion circuit"
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }
p3-symmetric = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-koala-bear = { workspace = true }

zkm-core-machine = { workspace = true }
zkm-core-executor = { workspace = true }
zkm-stark = { workspace = true }
zkm-derive = { workspace = true }
zkm-recursion-core = { workspace = true }
zkm-recursion-compiler = { workspace = true }
zkm-primitives = { workspace = true }
zkm-recursion-gnark-ffi = { workspace = true }

itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = "0.8.5"
tracing = { workspace = true }
hashbrown = { workspace = true, features = ["serde", "inline-more"] }
num-traits = "0.2.19"
rayon = "1.10.0"

[dev-dependencies]
#zkm-core-executor = { workspace = true, features = ["programs"] }
zkm-core-executor = { workspace = true }
ff = { version = "0.13", features = ["derive", "derive_bits"] }
p3-challenger = { workspace = true }
p3-symmetric = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
zkhash = "0.2.0"
rand = "0.8.5"
test-artifacts = { workspace = true }

[features]
default = ["native-gnark"]
native-gnark = ["zkm-recursion-gnark-ffi/native"]
debug = ["zkm-core-machine/debug"]
