[package]
name = "zkm-recursion-gnark-ffi"
description = "Ziren recursion gnark ffi"
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
p3-field = { workspace = true }
p3-symmetric = { workspace = true }
p3-koala-bear = { workspace = true }
zkm-recursion-compiler = { workspace = true }
zkm-core-machine = { workspace = true }
zkm-stark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.10.1"
log = "0.4.22"
num-bigint = "0.4.6"
cfg-if = "1.0"
bincode = "1.3.3"
anyhow = "1.0.86"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]
bindgen = "0.70.1"
cc = "1.1"
cfg-if = "1.0"

[features]
default = ["native"]
native = []
