[workspace]
members = [
    "sha2-rust",
    "sha2",
    "sha-extend",
    "keccak-sponge",
    "panic",
    "sha-compress",
    "fibonacci",
    "common",
    "bls12381-add",
    "bls12381-decompress",
    "bls12381-double",
    "bls12381-fp",
    "bls12381-fp2-addsub",
    "bls12381-fp2-mul",
    "bls12381-mul",
    "bn254-add",
    "bn254-double",
    "bn254-fp",
    "bn254-fp2-addsub",
    "bn254-fp2-mul",
    "bn254-mul",
    "cycle-tracker",
    "ed-add",
    "ed-decompress",
    "ed25519",
    "fibonacci",
    "hello-world",
    "hint-io",
    "poseidon2-permute",
    "secp256k1-add",
    "secp256k1-decompress",
    "secp256k1-double",
    "secp256k1-mul",
    "secp256r1-add",
    "secp256r1-decompress",
    "secp256r1-double",
    "sha-compress",
    "sha3-chain",
    "u256x2048-mul",
    "uint256-arith",
    "uint256-mul",
    "verify-proof",
    "u256x2048-mul",
    "unconstrained",
    "max_memory",
]
resolver = "2"

[workspace.dependencies]
serde = "1.0.204"
serde_json = "1.0.132"

[workspace.package]
version = "1.1.0"
edition = "2021"

# [patch.crates-io]
# curve25519-dalek = { git = "https://github.com/ziren-patches/curve25519-dalek", branch = "patch-4.1.3" }
# sha2-v0-10-8 = { git = "https://github.com/ziren-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-0.10.8" }
