[package]
name = "zkm-lib"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = "1.3.3"
cfg-if = "1.0.0"
serde = { version = "1.0.201", features = ["derive"] }
sha2 = { version = "0.10.8", default-features = false }
zkm-primitives = { workspace = true }

# ecdsa
elliptic-curve = { version = "0.13.4", optional = true, features = ["hazmat", "sec1", "ecdh"] }

[features]
default = ["ecdsa"]
ecdsa = ["dep:elliptic-curve"]
verify = []
