[package]
name = "bitcoin"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
zkm-zkvm = { path = "../../../crates/zkvm/entrypoint" }
bitcoin = { git = "https://github.com/ProjectZKM/rust-bitcoin", branch = "patch-0.32.7", default-features = false, features = ["serde", "rand", "secp-recovery"] }

#bitcoin = { path = "../../../../rust-bitcoin/bitcoin", default-features = false, features = ["serde", "rand", "secp-recovery"] }

