[package]
name = "keccak-host"
version = { workspace = true }
edition = { workspace = true }
default-run = "keccak-host"
publish = false

[dependencies]
hex = "0.4.3"
zkm-sdk = { workspace = true }
alloy-primitives = { version = "1.0", default-features = false, features = [
    "rlp",
] }
log = "0.4.22"

[build-dependencies]
zkm-build = { workspace = true }

[[bin]]
name = "keccak-host"
path = "src/main.rs"
