[package]
name = "large-sum-host"
version = { workspace = true }
edition = { workspace = true }
default-run = "large-sum-host"
publish = false

[dependencies]
hex = "0.4.3"
rand = "0.8"
zkm-sdk = { workspace = true }

[build-dependencies]
zkm-build = { workspace = true }

[[bin]]
name = "large-sum-host"
path = "src/main.rs"
