[package]
name = "ssz-withdrawals"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
zkm-zkvm = { path = "../../../crates/zkvm/entrypoint" }
hex-literal = "0.4.1"
ssz_rs = { version = "0.9.0", features = ["serde"] }
hex = "0.4.3"
serde_with = { version = "3.4.0", features = ["hex"] }
serde = { workspace = true, features = ["derive"] }
alloy-primitives = "0.6.0"
sha2 = { git = "https://github.com/ziren-patches/RustCrypto-hashes.git", package = "sha2", branch = "patch-sha2-0.10.8" }
