[package]
name = "tendermint-host"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
zkm-sdk = { workspace = true }
serde_json = { workspace = true }
tendermint-light-client-verifier = { version = "0.40.3", default-features = false, features = [
  "rust-crypto",
] }
serde_cbor = "0.11.2"

[build-dependencies]
zkm-build = { workspace = true }

[features]
cuda = ["zkm-sdk/cuda"]
