[package]
name = "unconstrained"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
crypto-bigint = "0.6"
hex = "=0.4"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "expose-field"] }
zkm-lib = { path = "../../../../crates/zkvm/lib" }
zkm-zkvm = { path = "../../../../crates/zkvm/entrypoint" }
